tests/NormalTests/paczka1/small_fuzzy/21700671.err
Error in line 1: iWa7XapE S473 14,1
Error in line 11: sRezZX1GcTZ S593 -1,9
